--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</li>
 				<li>
 					<p class="pageTitle">Styletour (bootstrap)</p>
-					<a href="https://raw.githack.com/amirvant/cv/master/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/master/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
 		</div>
