--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 			<ul class="simplePages">
 				<li>
 					<p class="pageTitle">Brightw (bootstrap)</p>
-					<a href="https://raw.githack.com/amirvant/cv/master/brightw (bootstrap)/index.html"><img src="img/brightw.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/brightw (bootstrap)/index.html"><img src="img/brightw.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
 					<p class="pageTitle">Biruang (BEM)</p>
-					<a href="https://raw.githack.com/amirvant/cv/master/biruang (BEM)/index.html"><img src="img/biruang.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/biruang(BEM)/index.html"><img src="img/biruang.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
 					<p class="pageTitle">Sales </p>
-					<a href="https://raw.githack.com/amirvant/cv/master/sale/index.html"><img src="img/sales.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/sale/index.html"><img src="img/sales.jpg" alt="" class="picture"></a>
 				</li>
 					<li>
 					<p class="pageTitle">Polo360</p>
-					<a href="https://raw.githack.com/amirvant/cv/master/polo360/index.html"><img src="img/polo360.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/polo360/index.html"><img src="img/polo360.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
 		</div>
@@ -44,11 +44,11 @@
 			<ul class="landingPages">
 				<li>
 					<p class="pageTitle">Eventide</p>
-					<a href="https://raw.githack.com/amirvant/cv/master/eventide/index.html"><img src="img/eventide.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/eventide/index.html"><img src="img/eventide.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
 					<p class="pageTitle">Styletour (bootstrap)</p>
-					<a href="https://kamaeva.github.io/master/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
+					<a href="https://kamaeva.github.io/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
 		</div>
