--- a/sale/index.html
+++ b/sale/index.html
@@ -73,10 +73,10 @@
 				<p>Акции по категориям</p>
 				<div class="hamburger hamburger2 off"></div>
 				<ul class="red-list">
-					<li><a href="#" class="btn-red">Парфюмерия</a><span> 2</span></li>
-					<li><a href="#" class="btn-red">Косметика</a><span> 3</span></li>
-					<li><a href="#" class="btn-red">С подарками</a><span> 5</span></li>
-					<li><a href="#" class="btn-red">С розыграшами</a><span> 4</span></li>
+					<li><a href="#" class="btn-red">Парфюмерия</a><span class="number"> 2</span></li>
+					<li><a href="#" class="btn-red">Косметика</a><span class="number"> 3</span></li>
+					<li><a href="#" class="btn-red">С подарками</a><span class="number"> 5</span></li>
+					<li><a href="#" class="btn-red">С розыграшами</a><span class="number"> 4</span></li>
 				</ul>
 			</div>
 			<div class="wrap">
