--- a/sale/index.html
+++ b/sale/index.html
@@ -35,7 +35,7 @@
 
 		<div class="main-section container">
 			<div class="main-left">
-				<a href="#"><img class="logo" src="img/Logo.png" alt=""></a>
+				<a href="#"><img class="logo" src="img/spraid.png" alt=""></a>
 				<form class="search-form">
         			<input class="search" type="text" placeholder="поиск по товару, артикулу, бренду">
     				<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
