--- a/polo360/index.html
+++ b/polo360/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Polo360</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/elastislide.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-    <link href="css/elastislide.css" rel="stylesheet">
+    
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -27,8 +30,7 @@
 			    </div>
 
 			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="#menu">
-			    	<div class="hamburger" onclick="toggleMenu();"></div>
+			    <div class="collapse navbar-collapse" id="menu">
 			      <ul class="nav navbar-nav navbar-right">
 			            <li><a href="#">HOME
 			            	</br><span>Back to home</span>
@@ -221,9 +223,10 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/jquery.elastislide.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/modernizr.custom.17475.js"></script>
-    <script src="js/jquery.elastislide.js"></script>
+    
 </body>
 </html>
