--- a/polo360/index.html
+++ b/polo360/index.html
@@ -180,7 +180,7 @@
 							<input type="text" placeholder="your name">
 							<input type="email" placeholder="your email adress">
 							<input type="textfield" placeholder="message" class="message">
-							<button class="btn btn-default blue-btn" type="button">Send it</button>
+							<button class="btn btn-default blue-btn send" type="button">Send it</button>
 						</form>
 					</div>
 					<div class="col-sm-4">
@@ -190,7 +190,7 @@
 							<li><a href="#"><p><img src="img/news-img2.jpg" alt="">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p></a></li>
 							<li><a href="#"><p><img src="img/news-img3.jpg" alt="">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p></a></li>
 						</ul>
-						<button class="btn btn-default blue-btn" type="button">Visit our blog</button>
+						<button class="btn btn-default blue-btn visit" type="button">Visit our blog</button>
 					</div>
 				</div>
 			</div>
