--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 		<div class="simplePagesWrap">
 			<ul class="simplePages">
 				<li>
-					<p class="pageTitle">Brightw (bootstrap)</p>
+					<p class="pageTitle">Brightw (bootstrap) !training!</p>
 					<a href="https://kamaeva.github.io/brightw (bootstrap)/index.html"><img src="img/brightw.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Biruang (BEM)</p>
+					<p class="pageTitle">Biruang (BEM) !training!</p>
 					<a href="https://kamaeva.github.io/biruang (BEM)/index.html"><img src="img/biruang.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Sales </p>
+					<p class="pageTitle">Sales !training!</p>
 					<a href="https://kamaeva.github.io/sale/index.html"><img src="img/sales.jpg" alt="" class="picture"></a>
 				</li>
 					<li>
-					<p class="pageTitle">Polo360</p>
+					<p class="pageTitle">Polo360 !training!</p>
 					<a href="https://kamaeva.github.io/polo360/index.html"><img src="img/polo360.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
@@ -43,11 +43,15 @@
 		<div class="landingPagesWrap">
 			<ul class="landingPages">
 				<li>
-					<p class="pageTitle">Eventide</p>
+					<p class="pageTitle">Lisicina (Wordpress)</p>
+					<a href="https://http://24love.com.ua/"><img src="img/lisicina.jpg" alt="" class="picture"></a>
+				</li>
+				<li>
+					<p class="pageTitle">Eventide !training!</p>
 					<a href="https://kamaeva.github.io/eventide/index.html"><img src="img/eventide.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Styletour (bootstrap)</p>
+					<p class="pageTitle">Styletour (bootstrap) !training!</p>
 					<a href="https://kamaeva.github.io/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
