--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 		</div>
 	</header>
 	<div class="content container">
-		<h3>Examples of usual pages:</h3>
-		<div class="simplePagesWrap">
-			<ul class="simplePages">
+		<h3>Examples of sites:</h3>
+		<div class="sitesWrap">
+			<ul class="sites">
 				<li>
-					<p class="pageTitle">Brightw (bootstrap) !training!</p>
-					<a href="https://kamaeva.github.io/brightw (bootstrap)/index.html"><img src="img/brightw.jpg" alt="" class="picture"></a>
+					<p class="pageTitle">Beautyreligion (Wordpress)</p>
+					<a href="http://www.beautyreligion.com.ua"><img src="img/beauty.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Biruang (BEM) !training!</p>
-					<a href="https://kamaeva.github.io/biruang (BEM)/index.html"><img src="img/biruang.jpg" alt="" class="picture"></a>
+					<p class="pageTitle">Star-band 01 (Wordpress)</p>
+					<a href="http://02.star-band.com.ua/"><img src="img/star2.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Sales !training!</p>
-					<a href="https://kamaeva.github.io/sale/index.html"><img src="img/sales.jpg" alt="" class="picture"></a>
+					<p class="pageTitle">Star-band 02 (Wordpress)</p>
+					<a href="https://01.star-band.com.ua/"><img src="img/star1.jpg" alt="" class="picture"></a>
 				</li>
-					<li>
-					<p class="pageTitle">Polo360 !training!</p>
-					<a href="https://kamaeva.github.io/polo360/index.html"><img src="img/polo360.jpg" alt="" class="picture"></a>
+				<li>
+					<p class="pageTitle">Tsarsky (I have done part of work)</p>
+					<a href="https://tsarsky.org"><img src="img/tsarsky.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
 		</div>
@@ -44,19 +44,39 @@
 			<ul class="landingPages">
 				<li>
 					<p class="pageTitle">Lisicina (Wordpress)</p>
-					<a href="https://http://24love.com.ua/"><img src="img/lisicina.jpg" alt="" class="picture"></a>
+					<a href="https://24love.com.ua/"><img src="img/lisicina.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Eventide !training!</p>
+					<p class="pageTitle">Eventide /training/</p>
 					<a href="https://kamaeva.github.io/eventide/index.html"><img src="img/eventide.jpg" alt="" class="picture"></a>
 				</li>
 				<li>
-					<p class="pageTitle">Styletour (bootstrap) !training!</p>
+					<p class="pageTitle">Styletour (bootstrap) /training/</p>
 					<a href="https://kamaeva.github.io/styletour (bootstrap)/index.html" ><img src="img/styletour.jpg" alt="" class="picture"></a>
 				</li>
 			</ul>
 		</div>
-
+		<h3>Examples of usual pages:</h3>
+		<div class="simplePagesWrap">
+			<ul class="simplePages">
+				<li>
+					<p class="pageTitle">Brightw (bootstrap) /training/</p>
+					<a href="https://kamaeva.github.io/brightw (bootstrap)/index.html"><img src="img/brightw.jpg" alt="" class="picture"></a>
+				</li>
+				<li>
+					<p class="pageTitle">Biruang (BEM) /training/</p>
+					<a href="https://kamaeva.github.io/biruang (BEM)/index.html"><img src="img/biruang.jpg" alt="" class="picture"></a>
+				</li>
+				<li>
+					<p class="pageTitle">Sales /training/</p>
+					<a href="https://kamaeva.github.io/sale/index.html"><img src="img/sales.jpg" alt="" class="picture"></a>
+				</li>
+					<li>
+					<p class="pageTitle">Polo360 /training/</p>
+					<a href="https://kamaeva.github.io/polo360/index.html"><img src="img/polo360.jpg" alt="" class="picture"></a>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<footer>
 		<div class="container">
